crash on https://pro.ant.design/
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | verified |
firefox91 | --- | verified |
People
(Reporter: 709922234, Assigned: mattwoodrow)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:91.0) Gecko/20100101 Firefox/91.0
Steps to reproduce:
visit https://pro.ant.design/
Actual results:
crash!
Comment 1•4 years ago
|
||
I was able to reproduce the issue on Nightly 91.0a1 and Beta 90.0b3 however, the issue does not occur on Firefox 89.0
Also, the issue only occurs when Webrender is enabled.
I've ran a mozregression and it returned the following Bug 1548056 as the culprit.
I'm setting the component in order to involve the development team in reviewing this issue.
Thank you for reporting!
Updated•4 years ago
|
Comment 2•4 years ago
|
||
This is also an guaranteed crash for me on Linux: https://crash-stats.mozilla.org/report/index/b1a8134e-ddb0-489e-aa9b-4e2fe0210608
Matt, are you able to investigate the cause? cc Andrew too as he fixed another regression from bug 1548056
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
![]() |
||
Comment 5•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Comment 6•4 years ago
•
|
||
I have verified the fix on Nightly 91.0a1 (20210615214502)
Comment 7•4 years ago
|
||
Please request beta uplift when you get a chance.
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Jeff do you think this is worth uplifting to 90?
Comment 10•4 years ago
|
||
Comment on attachment 9226672 [details]
Bug 1714596 - Don't try to create a temporary DrawTarget for zero-sized blend modes. r?jrmuizel
Beta/Release Uplift Approval Request
- User impact if declined: Crashes on some web content that does zero sized blending. We seem to have fairly high volume so probably worth fixing
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Pretty low risk. The patch is simple and there's not much that could go wrong.
- String changes made/needed:
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Comment on attachment 9226672 [details]
Bug 1714596 - Don't try to create a temporary DrawTarget for zero-sized blend modes. r?jrmuizel
approved for 90.0b11
Comment 12•4 years ago
|
||
bugherder uplift |
Comment 13•4 years ago
|
||
I have verified the fix on Beta 90.0b11 (20210622185930)
Description
•