Bug 1714596 - Don't try to create a temporary DrawTarget for zero-sized blend modes. r=jrmuizel, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D117592